--- a/src/App.css
+++ b/src/App.css
@@ -37,18 +37,18 @@ form button:hover {
   background: #ff6f47;
   color: white;
 }
-.todo-container {
+.employee-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.todo-list {
+.employee-list {
   min-width: 30%;
   list-style: none;
 }
 
-.todo {
+.employee {
   margin: 0.5rem;
   background: white;
   font-size: 1.5rem;
@@ -58,10 +58,10 @@ form button:hover {
   align-items: center;
   transition: all 1s ease;
 }
-.filter-todo {
+.filter-employee {
   padding: 1rem;
 }
-.todo li {
+.employee li {
   flex: 1;
 }
 
@@ -77,7 +77,7 @@ form button:hover {
 .complete-btn {
   background: rgb(11, 212, 162);
 }
-.todo-item {
+.employee-item {
   padding: 0rem 0.5rem;
 }
 
