--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,13 @@ form button {
   background: white;
 }
 form button {
-  color: #ff6f47;
+  color: #4772ff;
   background: #f7fffe;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 form button:hover {
-  background: #ff6f47;
+  background: #7847ff;
   color: white;
 }
 .employee-container {
@@ -50,6 +50,8 @@ form button:hover {
 
 .employee {
   margin: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   background: white;
   font-size: 1.5rem;
   color: black;
@@ -67,7 +69,7 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #ff6f47;
+  background: #4772ff;
   color: white;
   border: none;
   padding: 1rem;
@@ -115,7 +117,7 @@ select {
   overflow: hidden;
 }
 select {
-  color: #ff6f47;
+  color: #4772ff;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
@@ -127,13 +129,45 @@ select {
   top: 0;
   right: 0;
   padding: 1rem;
-  background: #ff6f47;
+  background: #4772ff;
   cursor: pointer;
   pointer-events: none;
 }
-/* Transition */
-/*
-.select:hover::after {
-  transform: scale(1.5);
+
+/* media queries */
+@media screen and (max-width: 500px){
+  
+  header {
+    font-size: 1.5rem;
+    padding-left: 5rem;
+  }
+
+  
+  
+  form {
+    padding-left: 1rem 15rem;
+  }
+
+ 
+
+  form button {
+    color: #4772ff;
+    
+  }
+  form button:hover {
+    background: #8d47ff;
+    color: white;
+  }
+
+  
+  .employee {
+    margin: 0.5rem;
+    margin-right: 0;
+    padding-left: 1rem;
+    padding-right: 0;
+    font-size: .9rem;
+  }
+
+  
 }
-*/
+
